# docker-vault-cli

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Python.dockerfile  README.md  arm64.Dockerfile  pyproject.toml
.github/workflows/: ci.yaml  publish.yml
src/: vault-cli.py
